--- a/incesticide.html
+++ b/incesticide.html
@@ -31,7 +31,7 @@
           <li><a href="in_utero.html">In Utero</a></li>
         </ul>
       </div>
-      <div class="main"> <!---START OF THE ABLUM IMAGE-------->
+      <div class="main"> <!--START OF THE ABLUM IMAGE-->
         <p class="main_name_incesticide">INCESTICIDE</p>
         <div class="main_img">
           <img src="img/incesticide.jpg" alt="" />
