final changes of the project

--- a/incesticide.html
+++ b/incesticide.html
@@ -34,7 +34,7 @@
       <div class="main"> <!--START OF THE ABLUM IMAGE-->
         <p class="main_name_incesticide">INCESTICIDE</p>
         <div class="main_img">
-          <img src="img/incesticide.jpg" alt="" />
+          <img src="../img/incesticide.jpg" alt="" />
         </div>
       </div>
       <div class="jose">
@@ -43,7 +43,7 @@
       <div class="track_list">  <!---START OF TRACK LIST-->
         <div class="track_img">
           <div class="track_order">
-            <a href="#"><img src="img/incesticide.jpg" alt="" /></a>
+            <a href="#"><img src="../img/incesticide.jpg" alt="" /></a>
             <p> 1. Dive</p>
           </div>
         </div>
