--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <div class="container">
         <div class="jumbotron">
           <h2>NIRVANA</h2>
-          <p>How a tiny punk band from rural washington <br> hit number one and changed rock forever.</p>
+          <p>HOW A TINY PUNK BAND FROM RURAL WASHINGTON <br> HIT NUMBER ONE AND CHANGES ROCK FOREVER.</p>
         </div>
       </div>
       <div class="dic_title">
@@ -49,11 +49,11 @@
             <a href="bleach.html"><img src="img/bleach.jpg" alt="" /></a>
           </div>
         </div>
-        <div class="disc_back">
+        <!-- <div class="disc_back">
           <div class="disc_album">
             <a href="incesticide.html"><img src="img/incesticide.jpg" alt="" /></a>
           </div>
-        </div>
+        </div> -->
         <div class="disc_back">
           <div class="disc_album">
             <a href="nevermind.html"><img src="img/nevermind.jpg" alt="" /></a>
